# offlineimap

./: Makefile  OfflineIMAP.cabal  rfc3501errata.txt
offlineimap/: accounts.py  imapserver.py
offlineimap/folder/: Base.py  IMAP.py  LocalStatus.py
offlineimap/ui/: Gnome.py  __init__.py  detector.py
src/: offlineimap.hs
src/Data/: Syncable.hs
src/Network/IMAP/: Connection.hs  Parser.hs  Types.hs
src/Network/IMAP/Parser/: Prim.hs
testsrc/: TestConnection.hs  TestInfrastructure.hs  TestParser.hs  TestParserPrim.hs  TestSyncable.hs  runtests.hs
