Name: OfflineIMAP
Version: 6.99.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Stable
Copyright: Copyright (c) 2002-2008 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING
homepage: http://software.complete.org/offlineimap
Build-type: Simple
Category: Network
Synopsis: IMAP/Maildir synchronization and reader support
Description: OfflineIMAP is a tool to simplify your e-mail reading.  With
 OfflineIMAP, you can:
 .
  * Read the same mailbox from multiple computers, and have your
    changes (deletions, etc.) be automatically reflected on
    all computers
 .
  * Use various mail clients to read a single mail box
 .
  * Read mail while offline (on a laptop) and have all changes
    synchronized when you get connected again
 .
  * Read IMAP mail with mail readers that do not support IMAP
 .
  * Use SSL (secure connections) to read IMAP mail even if your reader
    doesn't support SSL
 .
  * Synchronize your mail using a completely safe and fault-tolerant
    algorithm.  (At least I think it is!)
 .
  * Customize which mailboxes to synchronize with regular expressions
    or lists.
 .
  * Synchronize your mail two to four times faster than with other tools
    or other mail readers' internal IMAP support.
 .
 In short, OfflineIMAP is a tool to let you read mail how YOU want to.
Build-Type: Simple
Cabal-Version: >=1.2


Flag splitBase
  description: Choose the new smaller, split-up base package.

Library
  Hs-Source-Dirs: src

  Build-Depends: haskell98, network, unix, parsec, MissingH>=1.0.0,
    HDBC>=1.1.0, mtl, base, hslogger,
    ConfigFile, filepath, directory, process, regex-posix

  Exposed-Modules: Data.Syncable,
     Network.IMAP.Types,
     Network.IMAP.Parser

  If flag(splitBase)
    Build-Depends: base >= 3, directory, random, process, old-time,
                             containers, old-locale, array
  Else
    Build-Depends: base < 3


Executable offlineimap
  Main-Is: src/offlineimap.hs
  GHC-Options: -O2
  Extensions: ExistentialQuantification, OverlappingInstances,
      UndecidableInstances

Executable runtests
  Build-Depends: HUnit
  Main-Is: runtests.hs
  Hs-Source-Dirs: src, testsrc
  GHC-Options: -O2
  Build-Depends: QuickCheck
  Extensions: ExistentialQuantification, FlexibleInstances
